// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SectionHeader should render when date 1`] = `
<TouchableOpacity
  onPress={[Function]}
  ref={null}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#E7F3EB",
      "borderBottomWidth": 2,
      "elevation": 0,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingHorizontal": 16,
      "paddingVertical": 16,
      "shadowColor": "transparent",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowRadius": 0,
    }
  }
>
  <RCTText
    blue={true}
    bold={true}
    style={
      {
        "textTransform": "capitalize",
      }
    }
    testID="Primary"
  >
    December 2020
  </RCTText>
  <Ionicons
    color="#3957D0"
    name="chevron-forward-outline"
    size={24}
    style={{}}
  />
</TouchableOpacity>
`;

exports[`SectionHeader should render when title 1`] = `
<TouchableOpacity
  onPress={[Function]}
  ref={null}
  style={
    {
      "backgroundColor": "#FFFFFF",
      "borderBottomColor": "#E7F3EB",
      "borderBottomWidth": 2,
      "elevation": 0,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "paddingHorizontal": 16,
      "paddingVertical": 16,
      "shadowColor": "transparent",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowRadius": 0,
    }
  }
>
  <RCTText
    blue={true}
    bold={true}
    style={
      {
        "textTransform": "capitalize",
      }
    }
    testID="Primary"
  >
    some title
  </RCTText>
  <Ionicons
    color="#3957D0"
    name="chevron-forward-outline"
    size={24}
    style={{}}
  />
</TouchableOpacity>
`;
